[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/roguelike-characters-pack/Spritesheet/roguelikeChar_transparent.png" type="Texture" id=1]
[ext_resource path="res://Assets/uipack_fixed/Vector/UIpack_vector.svg" type="Texture" id=2]
[ext_resource path="res://UI/FontSize12.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/ParticipantInfo.gd" type="Script" id=4]
[ext_resource path="res://UI/ColorProgressBar.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 304, 104, 112 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0
modulate_color = Color( 0.329412, 0.329412, 0.329412, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 84, 16, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 172, 18, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 84, 18, 20 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 154, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 16, 138, 18, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 16, 104, 18, 14 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0313726, 0.501961, 0.0588235, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.235294, 0.235294, 0.235294, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="ParticipantInfo" type="PanelContainer"]
margin_right = 75.0
margin_bottom = 41.0
rect_min_size = Vector2( 120, 55 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 115.0
margin_bottom = 62.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 105.0
margin_bottom = 52.0
custom_constants/separation = 10

[node name="LeftSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 47.0
alignment = 1

[node name="ImageContainers" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftSide"]
margin_top = 4.0
margin_right = 30.0
margin_bottom = 24.0

[node name="ParticipantImage" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftSide/ImageContainers"]
margin_right = 30.0
margin_bottom = 20.0
texture = SubResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticipantImage2" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftSide/ImageContainers"]
visible = false
margin_top = -21.0
margin_right = 18.0
margin_bottom = -7.0
texture = SubResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticipantImage3" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftSide/ImageContainers"]
visible = false
margin_top = -12.0
margin_right = 18.0
margin_bottom = 8.0
texture = SubResource( 4 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticipantImage4" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftSide/ImageContainers"]
visible = false
margin_right = 18.0
margin_bottom = 16.0
texture = SubResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticipantImage5" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftSide/ImageContainers"]
visible = false
margin_top = 10.0
margin_right = 18.0
margin_bottom = 24.0
texture = SubResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticipantImage6" type="TextureRect" parent="MarginContainer/HBoxContainer/LeftSide/ImageContainers"]
visible = false
margin_top = 19.0
margin_right = 18.0
margin_bottom = 33.0
texture = SubResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticipantStatus" type="Label" parent="MarginContainer/HBoxContainer/LeftSide"]
margin_top = 28.0
margin_right = 30.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "!!!"

[node name="RightSide" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 100.0
margin_bottom = 47.0
size_flags_horizontal = 3

[node name="ParticipantName" type="Label" parent="MarginContainer/HBoxContainer/RightSide"]
margin_right = 60.0
margin_bottom = 33.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Henry
Brown"
align = 1
valign = 1

[node name="ParticipantEngagement" parent="MarginContainer/HBoxContainer/RightSide" instance=ExtResource( 5 )]
margin_top = 37.0
margin_right = 60.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 10 )
size_flags_vertical = 1
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
